# dock-alloc

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  LICENSE.txt  MODULE.bazel  README.md  setup_runpod.sh
.github/workflows/: bench-pages-delete.yml  bench-pages.yml  test.yaml  test.yml
crates/dock-alloc-core/: Cargo.toml  README.md
crates/dock-alloc-core/src/: cost.rs  domain.rs  iter.rs  lib.rs  marker.rs  mem.rs  primitives.rs  space.rs  time.rs
crates/dock-alloc-main/: Cargo.toml
crates/dock-alloc-main/src/: main.rs
crates/dock-alloc-model/: Cargo.toml  README.md
crates/dock-alloc-model/src/: dec.rs  err.rs  generator.rs  id.rs  lib.rs  model.rs  problem.rs  procgrid.rs  req.rs  sol.rs
crates/dock-alloc-model/src/generator/: config.rs  err.rs  mod.rs  policies.rs
crates/dock-alloc-solver/: Cargo.toml
crates/dock-alloc-solver/benches/berth/: berth_overlay_bench.rs  berthocc_bench.rs  quay_bench.rs
crates/dock-alloc-solver/src/: constraints.rs  domain.rs  framework.rs  greedy.rs  intervalset.rs  ledger.rs  lens.rs  lib.rs  model_access.rs  occ.rs  occupancy.rs  plan.rs  planning.rs  quay.rs  scheduling_read.rs  search.rs  state.rs  timeline.rs
crates/dock-alloc-solver/src/berth/: berthocc.rs  commit.rs  domain.rs  iter.rs  mod.rs  operations.rs  overlay.rs  quay.rs  slice.rs
crates/dock-alloc-solver/src/container/: intervalset.rs  mod.rs  timeline.rs
crates/dock-alloc-solver/src/framework/: iter.rs  mod.rs  planning.rs  state.rs
crates/dock-alloc-solver/src/greedy/: mod.rs
crates/dock-alloc-solver/src/meta/: config.rs  engine.rs  mod.rs  operator.rs  oplib.rs  oplib__.rs
crates/dock-alloc-solver/src/meta/oplib/: bandrepack.rs  blockshift.rs  cascaderelocate.rs  crossinsert.rs  destruct.rs  ec.rs  exchangetime.rs  grbok.rs  grl.rs  latepenalty.rs  mod.rs  mrs.rs  mtef.rs  mtlf.rs  neighborhoodruinrecreate.rs  noop.rs  pairswap.rs  pull.rs  push.rs  rdr.rs  relocate.rs  rl.rs  rs.rs  sn.rs  spaceshift.rs  swap.rs  util.rs  windowtighten.rs
crates/dock-alloc-solver/src/registry/: commit.rs  ledger.rs  mod.rs  operations.rs  overlay.rs
crates/dock-alloc-solver/src/state/: commit.rs  ledger.rs  overlay.rs
crates/solver/: Cargo.toml
crates/solver/src/: igt.rs  lib.rs  quay.rs
dock-alloc/core/: BUILD.bazel
dock-alloc/core/include/algorithm/: abs.h  almost_equal.h  pow.h
dock-alloc/core/include/container/: interval.h
dock-alloc/core/include/miscellaneous/: core_types.h  inline.h
dock-alloc/core/include/time/: time_interval.h
dock-alloc/core/include/type_traits/: align_up.h  bigger.h  concepts.h  max_align.h  size_sum.h  smallest_unsigned_for.h
dock-alloc/core/test/algorithm/: abs_test.cc  almost_equal_test.cc
dock-alloc/core/test/time/: time_interval_test.cc
dock-alloc/core/test/type_traits/: smallest_unsigned_for_test.cc
dock-alloc/core/tests/algorithm/: almost_equal_tests.cc
dock-alloc/core/tests/container/: interval_tests.cc
dock-alloc/model/: BUILD.bazel
dock-alloc/model/include/: ship.h  vessel.h
dock-alloc/model/test/: ship_test.cc  vessel_test.cc
dock-alloc/solver/: BUILD.bazel
dock-alloc/solver/benchmark/: timeline_benchmark.cc
dock-alloc/solver/include/: berth_schedule.h  berth_time_schedule.h  bit_span.h  disjoint_berth_schedule.h  disjoint_berth_time_schedule.h  slot_timeline.h  slot_timeline_bit_span.h  slot_timeline_gap.h  slot_timeline_segment_tree.h  time_interval.h  time_interval_tree.h  time_interval_tree_node.h  time_interval_tree_node_layout.h  time_slot_range.h  timeline.h
dock-alloc/solver/test/: bit_span_test.cc  disjoint_berth_schedule_test.cc  disjoint_berth_time_schedule_test.cc  slot_timeline_bit_span.cc  slot_timeline_gap_test.cc  slot_timeline_segment_tree_test.cc  slot_timeline_test.cc  time_interval_test.cc  time_interval_tree_node_layout_test.cc  time_interval_tree_node_test.cc  time_slot_range_test.cc  timeline_test.cc
dock-alloc/solver/tests/: time_interval_tree_node_layout_tests.cc
dockalloc/: BUILD.bazel
dockalloc/core/: BUILD.bazel  README.md
dockalloc/core/include/algorithm/: abs.h  almost_equal.h  pow.h
dockalloc/core/include/container/: interval.h  stack.h
dockalloc/core/include/memory/: aligned_allocator.h  aligned_storage.h
dockalloc/core/include/miscellaneous/: compiler.h  compiler_check.h  config.h  core_defines.h  core_types.h  inline.h  platform.h
dockalloc/core/include/type_traits/: align_up.h  bigger_alignment.h  bigger_size.h  complete.h  concepts.h  max_align.h  pow.h  size_sum.h  smallest_for.h  smallest_unsigned_for.h  type_traits.h
dockalloc/core/tests/algorithm/: abs_tests.cc  almost_equal_tests.cc  pow_tests.cc
dockalloc/core/tests/container/: interval_tests.cc  stack_tests.cc
dockalloc/core/tests/memory/: aligned_storage_tests.cc  alligned_allocator_tests.cc
dockalloc/core/tests/type_traits/: smallest_for_tests.cc
dockalloc/model/: BUILD.bazel
dockalloc/model/include/: types.h  vessel.h
dockalloc/model/tests/: vessel_tests.cc
dockalloc/solver/: BUILD.bazel
dockalloc/solver/benchmarks/container/: berth_occupancy_benchmarks.cc  bit_vector_benchmarks.cc  quay_segment_tree_benchmarks.cc
dockalloc/solver/include/: bit_span.h  time_interval_tree.h  time_interval_tree_node.h  time_interval_tree_node_layout.h
dockalloc/solver/include/container/: berth_occupancy.h  bit_vector.h  free_interval.h  interval_gap_tree.h  quay.h  quay_segment_tree.h
dockalloc/solver/include/miscellaneous/: config.h
dockalloc/solver/tests/: bit_span_tests.cc  time_interval_tree_node_layout_tests.cc  time_interval_tree_node_tests.cc
dockalloc/solver/tests/container/: berth_occupancy_tests.cc  bit_vector_tests.cc  free_interval_tests.cc  interval_gap_tree_tests.cc  quay_segment_tree_tests.cc  quay_tests.cc
