# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


[package]
name = "dock_alloc_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
dock_alloc_model = { path = "../dock-alloc-model" }
dock_alloc_core = { path = "../dock-alloc-core" }
smallvec = "1.15.1"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
rayon = "1.11.0"

[dependencies.tracing]
version = "0.1.41"
default-features = false
features = ["std", "attributes"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
static_assertions = "1.1.0"

[[bench]]
name = "berth_overlay_bench"
path = "benches/berth/berth_overlay_bench.rs"
harness = false

[[bench]]
name = "quay_bench"
path = "benches/berth/quay_bench.rs"
harness = false
