# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "core",
    hdrs = [
        "include/algorithm/pow.h",
        "include/time/time_interval.h",
        "include/type_traits/align_up.h",
        "include/type_traits/bigger_alignment.h",
        "include/type_traits/bigger_size.h",
        "include/type_traits/max_align.h",
        "include/type_traits/size_sum.h",
        "include/type_traits/smallest_unsigned_for.h",
    ],
    include_prefix = "dockalloc/core",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "core-test",
    srcs = [
        "test/algorithm/pow_test.cc",
        "test/time/time_interval_test.cc",
        "test/type_traits/smallest_unsigned_for_test.cc",
    ],
    deps = [
        "//dock-alloc/core",
        "@googletest//:gtest_main",
    ],
)
