# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "model",
    hdrs = [
        "include/types.h",
        "include/vessel.h",
    ],
    include_prefix = "dockalloc/model",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//dock-alloc/core",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "model-test",
    srcs = [
        "test/vessel_test.cc",
    ],
    deps = [
        "//dock-alloc/model",
        "@googletest//:gtest_main",
    ],
)
