# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "model",
    hdrs = [
        "include/types.h",
        "include/vessel.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
        ],
    }),
    include_prefix = "dockalloc/model",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//dock-alloc/core",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "model_tests",
    srcs = [
        "test/vessel_test.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
        ],
    }),
    deps = [
        "//dock-alloc/model",
        "@googletest//:gtest_main",
    ],
)
