# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "solver",
    hdrs = [
        "include/bit_span.h",
        "include/slot_timeline_gap.h",
        "include/time_interval.h",
        "include/time_slot_range.h",
    ],
    include_prefix = "dockalloc/solver",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:xsimd",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "solver-test",
    srcs = [
        "test/bit_span_test.cc",
        "test/slot_timeline_gap_test.cc",
        "test/time_interval_test.cc",
        "test/time_slot_range_test.cc",
    ],
    deps = [
        "//dock-alloc/solver",
        "@googletest//:gtest_main",
    ],
)
