# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "solver",
    hdrs = [
        "include/bit_span.h",
        "include/time_interval_tree.h",
        "include/time_interval_tree_node.h",
        "include/time_interval_tree_node_layout.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
        ],
    }),
    include_prefix = "dockalloc/solver",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//dock-alloc/core",
        "//third_party:xsimd",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "solver-test",
    srcs = [
        "test/bit_span_test.cc",
        "test/time_interval_tree_node_layout_test.cc",
        "test/time_interval_tree_node_test.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
        ],
    }),
    deps = [
        "//dock-alloc/solver",
        "@googletest//:gtest_main",
    ],
)
