# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "core",
    hdrs = [
        "include/algorithm/abs.h",
        "include/algorithm/almost_equal.h",
        "include/algorithm/pow.h",
        "include/container/interval.h",
        "include/miscellaneous/compiler.h",
        "include/miscellaneous/compiler_check.h",
        "include/miscellaneous/config.h",
        "include/miscellaneous/core_defines.h",
        "include/miscellaneous/core_types.h",
        "include/miscellaneous/inline.h",
        "include/type_traits/align_up.h",
        "include/type_traits/bigger_alignment.h",
        "include/type_traits/bigger_size.h",
        "include/type_traits/max_align.h",
        "include/type_traits/size_sum.h",
        "include/type_traits/smallest_for.h",
        "include/type_traits/type_traits.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3 -march=native -ffast-math",
        ],
    }),
    include_prefix = "dockalloc/core",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/hash:hash",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "core_tests",
    srcs = [
        "tests/algorithm/abs_tests.cc",
        "tests/algorithm/almost_equal_tests.cc",
        "tests/algorithm/pow_tests.cc",
        "tests/container/interval_tests.cc",
        "tests/type_traits/smallest_for_tests.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3 -march=native -ffast-math",
        ],
    }),
    deps = [
        "//dockalloc/core",
        "@abseil-cpp//absl/hash:hash_test",
        "@googletest//:gtest_main",
    ],
)
