# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

cc_library(
    name = "core",
    hdrs = [
        "include/algorithm/abs.h",
        "include/algorithm/almost_equal.h",
        "include/algorithm/pow.h",
        "include/container/interval.h",
        "include/memory/aligned_allocator.h",
        "include/miscellaneous/compiler.h",
        "include/miscellaneous/compiler_check.h",
        "include/miscellaneous/config.h",
        "include/miscellaneous/core_defines.h",
        "include/miscellaneous/core_types.h",
        "include/miscellaneous/inline.h",
        "include/type_traits/align_up.h",
        "include/type_traits/bigger_alignment.h",
        "include/type_traits/bigger_size.h",
        "include/type_traits/max_align.h",
        "include/type_traits/size_sum.h",
        "include/type_traits/smallest_for.h",
        "include/type_traits/type_traits.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3 -march=native",
        ],
    }),
    include_prefix = "dockalloc/core",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/hash:hash",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "core_tests",
    srcs = [
        "tests/algorithm/abs_tests.cc",
        "tests/algorithm/almost_equal_tests.cc",
        "tests/algorithm/pow_tests.cc",
        "tests/container/interval_tests.cc",
        "tests/memory/alligned_allocator_tests.cc",
        "tests/type_traits/smallest_for_tests.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3 -march=native",
        ],
    }),
    deps = [
        "//dockalloc/core",
        "@abseil-cpp//absl/hash:hash_test",
        "@googletest//:gtest_main",
    ],
)
