# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "model",
    hdrs = [
        "include/types.h",
        "include/vessel.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3 -march=native",
        ],
    }),
    include_prefix = "dockalloc/model",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//dockalloc/core",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "model_tests",
    srcs = [
        "tests/vessel_tests.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3 -march=native",
        ],
    }),
    deps = [
        "//dockalloc/model",
        "@googletest//:gtest_main",
    ],
)
