# Copyright 2025 Felix Kahle. All rights reserved.

cc_library(
    name = "solver",
    hdrs = [
        "include/bit_span.h",
        "include/time_interval_tree.h",
        "include/time_interval_tree_node.h",
        "include/time_interval_tree_node_layout.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3",
            "-march=native",
        ],
    }),
    include_prefix = "dockalloc/solver",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//dockalloc/core",
        "//third_party:xsimd",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "solver-test",
    srcs = [
        "tests/bit_span_tests.cc",
        "tests/time_interval_tree_node_layout_tests.cc",
        "tests/time_interval_tree_node_tests.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3",
            "-march=native",
        ],
    }),
    deps = [
        "//dockalloc/solver",
        "@googletest//:gtest_main",
    ],
)
