# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

cc_library(
    name = "solver",
    hdrs = [
        "include/bit_span.h",
        "include/time_interval_tree.h",
        "include/time_interval_tree_node.h",
        "include/time_interval_tree_node_layout.h",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3",
            "-march=native",
        ],
    }),
    include_prefix = "dockalloc/solver",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "//dockalloc/core",
        "//third_party:xsimd",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/log:log",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "solver-test",
    srcs = [
        "tests/bit_span_tests.cc",
        "tests/time_interval_tree_node_layout_tests.cc",
        "tests/time_interval_tree_node_tests.cc",
    ],
    copts = select({
        "//:compiler_msvc": [
            "/EHs-",
            "/EHc-",
            "/std:c++23",
            "/O2",
        ],
        "//conditions:default": [
            "-fno-exceptions",
            "-std=c++23",
            "-O3",
            "-march=native",
        ],
    }),
    deps = [
        "//dockalloc/solver",
        "@googletest//:gtest_main",
    ],
)
